--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <title>Fylo Website</title>
   </head>
-  <body></body>
+  <body>
+    <h1 class="text-6xl">Fylo Website</h1>
+  </body>
 </html>
