js script for dark mode

--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/style.css" />
+    <script>
+      // https://www.freecodecamp.org/news/how-to-build-a-dark-mode-switcher-with-tailwind-css-and-flowbite
+      if (
+        localStorage.getItem('color-theme') === 'dark' ||
+        (!('color-theme' in localStorage) &&
+          window.matchMedia('(prefers-color-scheme: dark)').matches)
+      ) {
+        document.documentElement.classList.add('dark')
+      } else {
+        document.documentElement.classList.remove('dark')
+      }
+    </script>
     <title>Fylo Website</title>
   </head>
   <body class="dark:bg-darkBlue dark:text-white font-opensans">
@@ -63,7 +75,7 @@
     <!-- Hero Section -->
     <section
       id="hero"
-      class="bg-curvy-light-mode dark:bg-curvy-dark-mode bg-no-repeat bg-bottom"
+      class="bg-curvy-light-mode dark:bg-curvy-dark-mode bg-no-repeat bg-contain bg-bottom"
     >
       <!-- Hero Container -->
       <div class="container mx-auto px-6 text-center md:pt-20 pb-52">
