js script and update index

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         document.documentElement.classList.remove('dark')
       }
     </script>
+    <script src="js/script.js" defer></script>
     <title>Fylo Website</title>
   </head>
   <body class="dark:bg-darkBlue dark:text-white font-opensans">
@@ -81,7 +82,7 @@
       <div class="container mx-auto px-6 text-center md:pt-20 pb-52">
         <img src="images/illustration-intro.png" alt="" class="mx-auto" />
         <h1
-          class="max-w-2xl mx-auto mb-10 text-3xl font-bold leading-normal mt14 md:text-4xl"
+          class="max-w-2xl mx-auto mb-10 text-3xl font-bold leading-normal mt-14 md:text-4xl"
         >
           All your files in one secure location, assessible anywhere.
         </h1>
@@ -102,7 +103,7 @@
     <!-- Features Section-->
     <section id="features" class="pt-12 bg-gray-50 dark:bg-darkBlue1">
       <!-- Features Container -->
-      <div class="container mx-auto px6 pb-32">
+      <div class="container mx-auto px-6 pb-32">
         <!-- First Row -->
         <div
           class="flex flex-col space-y-24 text-center md:flex-row md:space-y-0"
@@ -119,8 +120,51 @@
             </p>
           </div>
           <!-- Item 2 -->
+          <div class="flex flex-col items-center space-y-2 md:w-1/2">
+            <div class="flex items-center justify-center h-24 mb-6">
+              <img src="images/icon-security.svg" alt="" />
+            </div>
+            <h2 class="text-xl font-bold">Security you can trust</h2>
+            <p class="max-w-md">
+              2-factor authentication and user-controlled encryption are just a
+              couple of the security features we allow to help secure your
+              files.
+            </p>
+          </div>
+        </div>
+
+        <!-- Second Row -->
+        <div
+          class="flex flex-col space-y-24 mt-28 text-center md:flex-row md:space-y-0"
+        >
+          <!-- Item 3 -->
+          <div class="flex flex-col items-center space-y-2 md:w-1/2">
+            <div class="flex items-center justify-center h-24 mb-6">
+              <img src="images/icon-collaboration.svg" alt="" />
+            </div>
+            <h2 class="text-xl font-bold">Access your file from anywhere</h2>
+            <p class="max-w-md">
+              The ability to use a smartphone, tablet, or computer to access
+              your account means your files follow you everywhere.
+            </p>
+          </div>
+          <!-- Item 4 -->
+          <div class="flex flex-col items-center space-y-2 md:w-1/2">
+            <div class="flex items-center justify-center h-24 mb-6">
+              <img src="images/icon-any-file.svg" alt="" />
+            </div>
+            <h2 class="text-xl font-bold">Security you can trust</h2>
+            <p class="max-w-md">
+              2-factor authentication and user-controlled encryption are just a
+              couple of the security features we allow to help secure your
+              files.
+            </p>
+          </div>
         </div>
       </div>
     </section>
+
+    <!-- Productive Section -->
+    section
   </body>
 </html>
