--- a/index.html
+++ b/index.html
@@ -325,5 +325,31 @@
     </section>
 
     <!-- Footer -->
+    <footer class="bg-darkBlue2 text-white">
+      <div class="container mx-auto pt-12 px-5 pb-10">
+        <!-- Flex Container for All Items -->
+        <div
+          class="flex flex-col justify-between space-y-24 md:flex-row md:space-y-0"
+        >
+          <!-- Email & Phone -->
+          <div class="mt-10 space-y-6">
+            <div class="flex items-center space-x-3 md:-mt-10">
+              <div class="w-6">
+                <img src="images/icon-phone.svg" class="scale-10" alt="" />
+              </div>
+              <div>+1-543-123-4567</div>
+            </div>
+            <div class="flex items-center space-x-3">
+              <div class="w-6">
+                <img src="images/icon-email.svg" alt="" />
+              </div>
+              <div>example@fylo.com</div>
+            </div>
+          </div>
+
+          <!-- Menus -->
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
