--- a/index.html
+++ b/index.html
@@ -348,6 +348,52 @@
           </div>
 
           <!-- Menus -->
+          <div
+            class="flex flex-col space-y-10 text-xl md:text-base md:space-x-20 md:space-y-0 md:flex-row"
+          >
+            <div class="flex flex-col space-y-3">
+              <a href="#" class="hover:text-accentCyan">About</a>
+              <a href="#" class="hover:text-accentCyan">Jobs</a>
+              <a href="#" class="hover:text-accentCyan">Press</a>
+              <a href="#" class="hover:text-accentCyan">Blog</a>
+            </div>
+            <div class="flex flex-col space-y-3">
+              <a href="#" class="hover:text-accentCyan">Contact Us</a>
+              <a href="#" class="hover:text-accentCyan">Terms</a>
+              <a href="#" class="hover:text-accentCyan">Privacy</a>
+            </div>
+          </div>
+
+          <!-- Social -->
+          <div class="flex justify-center pb-10 space-x-3">
+            <div>
+              <a href="#">
+                <img
+                  src="images/facebook.svg"
+                  alt="Facebook"
+                  class="p-2 bg-darkBlue rounded-full ficon"
+                />
+              </a>
+            </div>
+            <div>
+              <a href="#">
+                <img
+                  src="images/twitter.svg"
+                  alt="Twitter"
+                  class="p-2 bg-darkBlue rounded-full ficon"
+                />
+              </a>
+            </div>
+            <div>
+              <a href="#">
+                <img
+                  src="images/instagram.svg"
+                  alt="Instagram"
+                  class="p-2 bg-darkBlue rounded-full ficon"
+                />
+              </a>
+            </div>
+          </div>
         </div>
       </div>
     </footer>
