--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="dark">
+<html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -92,7 +92,7 @@
           family, and co-workers.
         </p>
         <button
-          class="p-3 rounded-full w-52 bg-accentCyan hover:scale95"
+          class="p-3 rounded-full w-52 bg-accentCyan hover:scale-95"
           type="button"
         >
           Get Started
